# pennmush

./: .gitignore  CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  database.sql
BuildScripts/: starbase.penn
BuildScripts/MCPlugin/: senrep.xml
cmake/: CheckMathFunc.cmake  CheckRequirementsExist.cmake  CheckStdCHeaders.cmake  ColorDefines.cmake  ProcessPennFiles.cmake
game/: debug  gmon.out  mushcnf.dst
game/txt/: connect.txt  motd.txt  newuser.txt
hdrs/: attrib.h  combat.h  conf.h  dbdefs.h  extchat.h  externs.h  game.h  notify.h  odbc.h  space.h  sql.h  strutil.h  switches.h
hdrs/kren/: kchat.h
src/: Makefile.in  attrib.c  bsd.c  chunk.c  cmds.c  combat.c  command.c  conf.c  connlog.c  create.c  db.c  destroy.c  extchat.c  extmail.c  flaglocal.c  flags.c  function.c  fundb.c  funlocal.c  funmath.c  funstr.c  game.c  local.c  markup.c  match.c  move.c  myssl.c  notify.c  odbc.c  odbc_mushdb.c  parse.c  predicat.c  set.c  space_alert.c  space_ansi.c  space_balance.c  space_border.c  space_conf.c  space_crypt.c  space_error.c  (+20 more)
src/kren/: combat.c  kchat.c
